# filer

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  REQUIREMENTS.md  SECURITY.md  biome.json  index.html  package.json  pnpm-lock.yaml  setup-env.bat  vite.config.ts  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  msix-build.yml  release.yml  weekly-issues.yml
docs/: MSIX-RELEASE.md  PRIVACY-POLICY.md  STORE-LISTING-DRAFT.md  feature-comparison-research.md  microsoft-store-signing.md
scripts/: build-msix.ps1  bump-version.mjs  capture-tomafiler.ps1  create-signing-cert.ps1  sign-msix.ps1
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/msix/: AppxManifest.xml.template  priconfig.xml
src-tauri/src/: clipboard_watcher.rs  dir_watcher.rs  folder_view_watcher.rs  jumplist.rs  lib.rs  main.rs
src-tauri/src/commands/: ai.rs  clipboard.rs  copy_queue.rs  fs.rs  icons.rs  media.rs  mod.rs  system.rs  tab_drag.rs  terminal.rs  window.rs
src-tauri/src/db/: custom_action.rs  dir_size_cache.rs  history.rs  mod.rs  rules.rs  smart_folder.rs  usage.rs  workspace.rs
src-tauri/src/watcher/: engine.rs  mod.rs
src/commands/: registry.ts
src/components/: ImageToolbar.tsx
src/components/AiOrganizer/: AiOrganizer.test.tsx  AiOrganizer.tsx  index.ts
src/components/AiSettings/: AiSettings.tsx  index.ts
src/components/BookmarkBar/: BookmarkBar.tsx
src/components/CodePreview/: CodePreview.tsx  index.ts
src/components/CommandPalette/: CommandPalette.tsx
src/components/ContextMenu/: ContextMenu.tsx  index.ts  nativeMenu.ts
src/components/CopyQueue/: CopyQueuePanel.tsx  index.ts
src/components/DragSuggestion/: DragSuggestion.tsx
src/components/DuplicateDetector/: DuplicateDetector.tsx  index.ts
src/components/FontPreview/: FontPreview.tsx  index.ts
src/components/HomeView/: HomeView.tsx
src/components/MarkdownPreview/: MarkdownPreview.tsx
src/components/NavigationBar/: NavigationBar.tsx
src/components/Panel/: ColumnHeader.tsx  ContentSearchResults.tsx  DragGhost.tsx  FileIcon.tsx  FileRow.tsx  FilterChips.tsx  FilterDropdown.tsx  FolderPeek.tsx  GridCell.tsx  GridView.tsx  Panel.tsx  Toolbar.tsx
src/components/PdfViewer/: PdfViewer.tsx
src/components/PreviewPanel/: PreviewPanel.tsx
src/components/PropertiesDialog/: PropertiesDialog.tsx  index.ts
src/components/PsdPreview/: PsdPreview.tsx  index.ts
src/components/QuickLook/: QuickLook.tsx  index.ts
src/components/RuleManager/: RuleEditor.test.tsx  RuleEditor.tsx  RuleManager.tsx  index.ts
src/components/RuleSuggestion/: RuleSuggestionBanner.tsx  (+3 more)
src/hooks/: useFsWatcher.ts  useImageControls.ts  useMediaPlayback.ts  useNativeDrop.ts  usePreview.ts  useRubberBand.ts  useSortAnimation.ts  useTabDrag.ts
src/i18n/: en.ts  index.ts  ja.ts
src/stores/: aiStore.ts  bookmarkStore.ts  commandPaletteStore.ts  copyQueueStore.ts  customActionStore.ts  dirSizeStore.ts  duplicateDetectorStore.ts  iconStore.ts  panelStore.ts  ruleStore.ts  ruleSuggestionStore.ts  ruleWizardStore.ts  settingsStore.ts  smartFolderStore.ts  suggestionStore.ts  templateStore.ts  terminalStore.ts  themeStore.ts  thumbnailStore.ts  toastStore.ts  undoStore.ts  workspaceStore.ts
src/test/: setup.ts
src/types/: index.ts
src/utils/: dragIcon.ts  fileType.ts  format.ts  menuPosition.ts  previewConstants.ts  tidiness.ts
(+11 files in other folders)
