[package]
name = "filer"
version = "0.1.0"
description = "A dual-pane file manager for Windows"
authors = ["you"]
edition = "2021"

[lib]
name = "filer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
trash = "5"
dirs = "6"
open = "5"
base64 = "0.22"
