[package]
name = "filer"
version = "0.1.0"
description = "A dual-pane file manager for Windows"
authors = ["you"]
edition = "2021"

[lib]
name = "filer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
trash = "5"
dirs = "6"
open = "5"
base64 = "0.22"
rusqlite = { version = "0.32", features = ["bundled"] }
notify = "7"
glob = "0.3"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
keyring = { version = "3", features = ["windows-native"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Graphics_Gdi",
  "Win32_Storage_FileSystem",
] }
