[package]
name = "filer"
version = "1.2.0"
description = "A dual-pane file manager for Windows"
authors = ["Tomako"]
license = "UNLICENSED"
edition = "2021"

[lib]
name = "filer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
trash = "5"
dirs = "6"
open = "5"
base64 = "0.22"
rusqlite = { version = "0.32", features = ["bundled"] }
notify = "7"
glob = "0.3"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
keyring = { version = "3", features = ["windows-native"] }
tauri-plugin-drag = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
windows = { version = "0.61", features = [
  "Win32_System_Com",
  "Win32_System_Com_StructuredStorage",
  "Win32_UI_Shell",
  "Win32_UI_Shell_Common",
  "Win32_UI_Shell_PropertiesSystem",
  "Win32_Foundation",
] }
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_Graphics_Gdi",
  "Win32_Storage_FileSystem",
  "Win32_System_DataExchange",
  "Win32_System_Memory",
  "Win32_System_Ole",
] }
